Fix issues in MetricUsageCollector
1. Force the JVM to operate in UTC, otherwise there are subtle bugs when
   running on a non-UTC system, because ApplicationClock forces UTC, and
   Hibernate returns values in the system timezone.
2. Rework MetricUsageCollector to partition hours up-front, and deal
   with clearing monthly totals as needed up-front.
3. Rework MetricUsageCollector to handle stale hosts by maintaining a
   running lookup of active instances and tallying from the lookup
   rather than from latest account state.
4. Ensure CombiningRollupSnapshotStrategy fetches existing snapshots for
   all product IDs being tallied.
5. Fix a redunant loop over products in CombiningRollupSnapshotStrategy.
6. Filter out running calculations not having any usage.

Testing
-------

1. Insert some events into the DB:

```sql
INSERT INTO events (id, account_number, timestamp, data, event_type, event_source, instance_id) VALUES ('1edc517a-d049-4361-9804-e4111ce061ae', 'account123', '2021-03-10 19:00:00.000000', '{"role":"ocp","sla": "Premium", "usage": "Development/Test", "event_id": "1edc517a-d049-4361-9804-e4111ce061ae", "timestamp": "2021-03-10T19:00:00Z", "event_type": "snapshot", "expiration": "2021-03-10T20:00:00Z", "instance_id": "c6123fbb-84d0-47a7-b069-ff9048caf7c7", "display_name": "c6123fbb-84d0-47a7-b069-ff9048caf7c7", "event_source": "prometheus-openshift", "measurements": [{"uom": "Cores", "value": 12.0}], "service_type": "OpenShift Cluster", "account_number": "account123"}', 'snapshot', 'prometheus-openshift', 'c6123fbb-84d0-47a7-b069-ff9048caf7c7');
INSERT INTO events (id, account_number, timestamp, data, event_type, event_source, instance_id) VALUES ('9fd69ad7-9294-4d8d-a5f4-c5ca45bdb2ec', 'account123', '2021-03-10 19:00:00.000000', '{"role":"ocp","sla": "Standard", "usage": "Development/Test", "event_id": "9fd69ad7-9294-4d8d-a5f4-c5ca45bdb2ec", "timestamp": "2021-03-10T19:00:00Z", "event_type": "snapshot", "expiration": "2021-03-10T20:00:00Z", "instance_id